[package]
name = "egui-macroquad"
version = "0.16.1"
authors = ["Ilya Sheprut <optozorax@gmail.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
homepage = "https://github.com/optozorax/egui-macroquad"
repository = "https://github.com/optozorax/egui-macroquad"
description = "Bindings between egui and macroquad"
readme = "README.md"
categories = ["gui", "game-development"]
keywords = ["gui", "imgui", "immediate", "portable", "gamedev"]
include = [
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "**/*.rs",
  "Cargo.toml",
]

[dependencies]
egui = "0.28.1"
egui-miniquad = { git = 'https://github.com/not-fl3/egui-miniquad.git', rev="5df57233a60f75faadfa14a3ad9d4cddde637605" }
macroquad = { version="0.4.5", default-features=false }


[features]
default = ["audio"]
audio = ["macroquad/audio"]

[dev-dependencies]
egui_demo_lib = "0.28.1"

[profile.release]
opt-level = 2
